# graphics-19

3d-model/: 3d-model.frag  3d-model.py  3d-model.vert  PyOpenGL-3.1.3rc1-cp36-cp36m-win_amd64.whl  install.sh  objloader.py  requirements.txt  run.sh
fractal/: fractal.js  index.html
ray-marching/: CMakeLists.txt  install.sh  main.cpp  ray-marching.frag  ray-marching.vert  readpng.cpp  readpng.h
